  * Ship /etc/postgresql-common/supported_versions even in non-backport
    packages. (Closes: #808353)
  * pg_createcluster: Error out if provided log file is a directory.
    (Closes: #791556)
  * pg_upgradecluster: Set dynamic_shared_memory_type from the new
    postgresql.conf instead of defaulting to mmap. (Closes: #823209)

 -- Christoph Berg <christoph.berg@credativ.de>  Tue, 06 Sep 2016 17:20:14 +0200

postgresql-common (175) unstable; urgency=medium

  * pg_createcluster, createcluster.conf: Set cluster_name on 9.5+.
  * pg_buildext: Don't set any CFLAGS by default.
  * start.conf: Update documentation/comments to recommend running
    systemctl daemon-reload.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 23 Jun 2016 12:26:27 +0200

postgresql-common (174) unstable; urgency=medium

  [ Christoph Berg ]
  * postgresql-common: Enforce strict version dependency on
    postgresql-client-common to avoid API mismatch bugs in PgCommon.pm.
  * maintscripts-functions: Save pg_dump on catversion bumps as well.
  * Updated ja translation by Takuma Yamada, thanks! (Closes: #820756)
  * Remove not-to-be-translated shell code-only chunk from
    debian/po/templates.pot. (debconf-updatepo --skip-pot to the rescue!)
    (Closes: #821445)

  [ Martin Pitt ]
  * debian/supported-versions: Add Ubuntu 16.10.

 -- Christoph Berg <christoph.berg@credativ.de>  Wed, 11 May 2016 15:04:25 +0200

postgresql-common (173) unstable; urgency=medium

  [ Christoph Berg ]
  * README.Debian: Fix a typo.
  * Updated nl translation, thanks Frans Spiesschaert! (Closes: #812353)
  * Updated ru translation, thanks Sergey Alyoshin! (Closes: #815596)
  * Updated ja translation, thanks Takuma Yamada! (Closes: #816069)
  * preinst_check_catversion: Handle missing catalog version file.
  * pg_renamecluster: Don't try to rename a non-existing stats directory.
  * pg_conftool: Refuse operation on non-existing clusters.
  * maintscript-functions, templates: Remove '#' characters from upgrade