@@ -15,8 +15,10 @@ postgresql-common (176) UNRELEASED; urgency=medium
     (Closes: #791556)
   * pg_upgradecluster: Set dynamic_shared_memory_type from the new
     postgresql.conf instead of defaulting to mmap. (Closes: #823209)
+  * pg_upgradecluster: Use data checksums in the new cluster if the old uses
+    them. (Closes: #830228)
 
- -- Christoph Berg <christoph.berg@credativ.de>  Tue, 06 Sep 2016 17:20:14 +0200
+ -- Christoph Berg <christoph.berg@credativ.de>  Tue, 06 Sep 2016 17:56:41 +0200
 
 postgresql-common (175) unstable; urgency=medium
 
